static/css/components/mybooks-details.css
.crumb {
  display: flex;
  margin: 0;
  align-items: center;
  vertical-align: bottom;
}

.crumbicon {
  display: grid;
  grid: [stack] var(--crumbicon-size) / [stack] var(--crumbicon-size);
  place-items: start;
  width: min-content;
}

.crumbicon > * {
  grid-area: stack;
  padding-left: 10px;
}

.breadcrumb-wrapper {
  display: flex;
  flex-wrap: wrap;
  white-space: nowrap;
}

.social-wrapper {
  display: flex;
  align-items: baseline;
}

.follow-row {
  display: flex;
  align-items: center;
}

.follow-row--name {
  flex: 0.5;
}

.breadcrumb-title {
  display: inline-block;
  margin: 0;
  padding: 5px 5px 5px 0;
}

.disguised-select {
  grid-area: stack;
  min-height: 100%;
  inline-size: 100%;
  block-size: 100%;
  opacity: 0.01;
  z-index: var(--z-index-level-2);
}

.dropdown {
  box-shadow: 0 0 0 1px var(--lightest-grey);
  border-radius: var(--border-radius-button);
}

.down-chevron {
  margin: 6px 10px 0 3px;
  display: inline-block;
  transform: rotate(90deg);
  z-index: var(--z-index-level-1);
}

.mybooks-details {
  padding: 10px;
  display: flex;
  flex-direction: column;
  margin: 0 auto;
  width: 75%;
}

.mybooks-details header {
  display: flex;
  justify-content: space-between;
}

.mybooks-details header > * {
  padding-left: 0;
}

.mybooks-details .navigation-breadcrumbs {
  display: flex;
  flex-direction: row;
}

.mybooks-details .navigation-breadcrumbs .crumb {
  margin-right: 10px;
}

.mybooks-details .details-content {
  padding: 8px;
}

/* stylelint-disable selector-max-specificity */
.mybooks-details .details-content > div#contentBody {
  padding: 0 !important;
  margin-left: 8px;
}
/* stylelint-enable selector-max-specificity */

.mybooks-details h1 {
  margin-left: 0;
}

.mybooks-details .details-title {
  display: inline;
}

/* stylelint-disable selector-max-specificity */
.mybooks-details > div:not([class]):not([id]) {
  margin-left: 8px;
}
/* stylelint-enable selector-max-specificity */

@media only screen and (max-width: 768px) {
  .breadcrumb-wrapper {
    align-items: self-end;
  }

  .social-wrapper {
    flex-direction: column;
  }

  .mybooks-details {
    padding: 10px;
    margin: 0;
    width: 100%;
  }

  .mybooks-details .page-banner-mybooks {
    display: none;
  }

  .mybooks-details .details-content {
    padding: 0;
  }

  .no-padding {
    padding: 0;
  }

  .mybooks-details-specific {
    display: none;
    padding: 0;
  }

  .carousel-container {
    margin: 0 -18px;
  }

  .carousel-section-header {
    border-top: 1px solid var(--light-mid-grey);
  }

  .showcase {
    display: flex;
    background-color: var(--lightest-grey);
    gap: 15px;
    padding: 0 15px;
    padding-top: 20px;
    height: 25vw;
    margin-bottom: -10px;
  }

  .showcase__item {
    margin: 0;
  }

  .nopadding {
    padding: 0;
  }

  .last-book {
    -webkit-mask-image: linear-gradient(
      to left,
      rgba(0, 0, 0, 0),
      rgba(0, 0, 0, 1)
    );
    mask-image: linear-gradient(to left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 1));
  }

  .book .book-cover.mobile {
    height: auto;
    width: calc(20vw - 15px);
  }
}

@media only screen and (max-width: 450px) {
  .mybooks-details .navigation-breadcrumbs {
    flex-direction: column;
  }

  .mybooks-details .navigation-breadcrumbs .crumb {
    margin-bottom: 10px;
  }
}

